@@ -26,4 +26,4 @@ Import('*')
 # PYEXTMOD - name of the Python extension module, package name used by default
 #
 #
-standardSConscript(UTESTS=[], DOCGEN="doxy-all psana-modules-doxy")
+standardSConscript(UTESTS=['TestCalibFileFinder'], DOCGEN="doxy-all psana-modules-doxy")
